# advent-of-code

./: .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  00.py  README.md  answers.yaml  libaoc.py  pyproject.toml  requirements.in  requirements.txt
libaoc/: __init__.py  grid.py  solution_base.py
solutions/2021/: 01.py  02.py  03.py  04.py
solutions/2022/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py
solutions/2023/: 01.py  02.py
solutions/aoc2015/: 01.py  02.py  03.py  04.py  05.py  06.py
solutions/aoc2021/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py
solutions/aoc2022/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py
solutions/aoc2023/: 01.py  02.py  03.py  04.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  19.py
solutions/aoc2024/: 01.py  02.py  03.py  04.py  05.py
solutions/aoc2025/: 01.py  03.py  04.py
tests/: conftest.py  test_solutions.py
tests/libaoc/: test_grid.py
